--- a/users-folders/shaked/History.txt
+++ b/users-folders/shaked/History.txt
@@ -798,3 +798,103 @@ Diesel Badass Oversized Gray Dial Gunmetal PVD Mens Watch DZ7247 = 229.95 = Free
 S BNIB",  = 169.99 = 15.94 = http://www.ebay.com/itm/DIESEL-WATCH-BIG-DADDY-DZ7127-CHRONOGRAPH-BLACK-DIAL-BLACK-LEATHER-MENS-BNIB-/272218412629 = http://thumbs2.ebaystatic.com/m/mRN9jKzO8HH-xXs-qma7pQQ/140.jpg
 Diesel Mr. Daddy 2.0 Black Dial Black Leather Mens Watch DZ7348 = 209.99 = Free = http://www.ebay.com/itm/Diesel-Mr-Daddy-2-0-Black-Dial-Black-Leather-Mens-Watch-DZ7348-/151927705270 = http://thumbs3.ebaystatic.com/m/mecgKu8g2UNc8M07aSfaEAg/140.jpg
 s Little Daddy Chronograph Gold-Tone Brown Leather Strap Watch DZ7288",  = 168.0 = 6.1 = http://www.ebay.com/itm/Diesel-Mens-Little-Daddy-Chronograph-Gold-Tone-Brown-Leather-Strap-Watch-DZ7288-/322079551649 = http://thumbs2.ebaystatic.com/m/mwOzuubMTLdV_7ycQ68BcWg/140.jpg
+s AX2508 Brown Leather Quartz Watch",  = 92.99 = Free = http://www.ebay.com/itm/Armani-Exchange-Mens-AX2508-Brown-Leather-Quartz-Watch-/131743117016 = http://thumbs1.ebaystatic.com/m/mMebYT-zR2vKTe-S808hJvw/140.jpg
+Armani Sportivo Chronograph Black Dial Black Leather Strap Mens Watch AR2461 = 196.99 = Free = http://www.ebay.com/itm/Armani-Sportivo-Chronograph-Black-Dial-Black-Leather-Strap-Mens-Watch-AR2461-/151387336766 = http://thumbs3.ebaystatic.com/m/mLBqbeqvxK7jhdc2sOXLfUg/140.jpg
+s Classic AR1692 Black Leather Quartz Watch",  = 102.12 = Free = http://www.ebay.com/itm/Emporio-Armani-Mens-Classic-AR1692-Black-Leather-Quartz-Watch-/131544186903 = http://thumbs4.ebaystatic.com/m/myTkPo9rLxf-1aJdrqMBV-g/140.jpg
+Emporio Armani Classic Stainless Steel Mens Watch AR1811 = 178.66 = Free = http://www.ebay.com/itm/Emporio-Armani-Classic-Stainless-Steel-Mens-Watch-AR1811-/191803569536 = http://thumbs1.ebaystatic.com/m/mH_GjyX6AwFVks1w8WYJf-Q/140.jpg
+s Black and Gold Chronograph Dial Watch",  = 134.99 = Free = http://www.ebay.com/itm/AR5905-Emporio-Armani-Mens-Black-and-Gold-Chronograph-Dial-Watch-/282046259218 = http://thumbs3.ebaystatic.com/m/m0MXqxwmxFIU9yzlOJGsPdQ/140.jpg
+Armani Watch = 200.0 = 200.0 = http://www.ebay.com/itm/Armani-Watch-/162081263100 = http://thumbs1.ebaystatic.com/m/m6yVZbsgnqpicMvOPsKK1Jw/140.jpg
+NEW EMPORIO ARMANI AR2434 MENS STEEL CHRONOGRAPH WATCH - 2 YEAR WARRANTY = 115.0 = 17.36 = http://www.ebay.com/itm/NEW-EMPORIO-ARMANI-AR2434-MENS-STEEL-CHRONOGRAPH-WATCH-2-YEAR-WARRANTY-/291387456415 = http://thumbs4.ebaystatic.com/m/mnrIsZCwvCADy7MPaHD7PCQ/140.jpg
+"Authentic & Incredible" Emporio Armani AR0285 Wrist Watch for Men.LOOK!!! NR! = 99.99 = 179.99 = http://www.ebay.com/itm/Authentic-Incredible-Emporio-Armani-AR0285-Wrist-Watch-Men-LOOK-NR-/222123366347 = http://thumbs4.ebaystatic.com/m/mNrPZ3jsK-E2I3DE3UVS-QA/140.jpg
+NEW EMPORIO ARMANI AR5905 ROSE GOLD MENS CHRONOGRAPH WATCH - 2 YEAR WARRANTY = 109.0 = 17.36 = http://www.ebay.com/itm/NEW-EMPORIO-ARMANI-AR5905-ROSE-GOLD-MENS-CHRONOGRAPH-WATCH-2-YEAR-WARRANTY-/271874246038 = http://thumbs3.ebaystatic.com/m/mKIgPeWzIEz5DOXtC2Do0hA/140.jpg
+S BLUE CHRONOGRAPH DIAL WATCH",  = 137.99 = Free = http://www.ebay.com/itm/NEW-EMPORIO-ARMANI-AR5860-MENS-BLUE-CHRONOGRAPH-DIAL-WATCH-/272252477459 = http://thumbs4.ebaystatic.com/m/mzcdd6Vl3humZ76jifiw7HA/140.jpg
+NEW EMPORIO ARMANI AR2453 MENS BLACK CHRONOGRAPH WATCH - 2 YEAR WARRANTY = 119.0 = 17.36 = http://www.ebay.com/itm/NEW-EMPORIO-ARMANI-AR2453-MENS-BLACK-CHRONOGRAPH-WATCH-2-YEAR-WARRANTY-/271885821641 = http://thumbs2.ebaystatic.com/m/mtExiQzwtstKRM8OSeFbl0g/140.jpg
+s Gianni AR1909 Rose Gold Stainless-Steel Quartz Watch",  = 217.69 = Free = http://www.ebay.com/itm/Emporio-Armani-Womens-Gianni-AR1909-Rose-Gold-Stainless-Steel-Quartz-Watch-/151867618542 = http://thumbs3.ebaystatic.com/m/mtsznmjNaVLKeI6zZTkDbjg/140.jpg
+*NEW* EMPORIO ARMANI AR1451 BLACK CERAMIC CHRONO STAINLESS STEEL MEN WATCH = 125.0 = 24.59 = http://www.ebay.com/itm/NEW-EMPORIO-ARMANI-AR1451-BLACK-CERAMIC-CHRONO-STAINLESS-STEEL-MEN-WATCH-/141906305582 = http://thumbs3.ebaystatic.com/m/mf64bTl7gSdRv39cQTKgdtQ/140.jpg
+s Watch AR0398 (NEW)",  = 179.99 = Free = http://www.ebay.com/itm/Emporio-Armani-Classic-Mens-Watch-AR0398-NEW-/121994858509 = http://thumbs2.ebaystatic.com/m/mx1y6ngFn1-4RnVExozzIrg/140.jpg
+s AX1609  = 93.0 = Free = http://www.ebay.com/itm/Armani-Exchange-Mens-AX1609-Active-Chronograph-Blue-Leather-Watch-/191697519449 = http://thumbs2.ebaystatic.com/m/mDuhSNmE2eQiT7VHGRCbN0A/140.jpg
+S WATCH",  = 85.95 = 9.99 = http://www.ebay.com/itm/BRAND-NEW-ARMANI-EXCHANGE-AX2160-BLACK-DUAL-DIAL-SILVER-STEEL-TONE-MENS-WATCH-/222102271985 = http://thumbs2.ebaystatic.com/m/mLCX9LGNkpHPaMJS_8ThdUQ/140.jpg
+New Armani Exchange AX1508 Street Chronograph Black Dial Black Leather Men Watch = 229.99 = 229.99 = http://www.ebay.com/itm/New-Armani-Exchange-AX1508-Street-Chronograph-Black-Dial-Black-Leather-Men-Watch-/111842777197 = http://thumbs2.ebaystatic.com/m/mnbfkIwn-xxZRj7W7jyxrLg/140.jpg
+s Classic AR2432 Black Leather Quartz Watch",  = 145.64 = Free = http://www.ebay.com/itm/Emporio-Armani-Mens-Classic-AR2432-Black-Leather-Quartz-Watch-/131416154505 = http://thumbs2.ebaystatic.com/m/mtqzRoo-nzHIx5agLKUEcrA/140.jpg
+s AX2092 Chronograph Crystal Stainless steel Watch",  = 98.99 = Free = http://www.ebay.com/itm/Armani-Exchange-Mens-AX2092-Chronograph-Crystal-Stainless-steel-Watch-/221844213332 = http://thumbs1.ebaystatic.com/m/mdU-z1Nk6rSbV_07t0YNTlQ/140.jpg
+Emporio Armani Classic Chronograph Black Dial Black Leather Mens Watch AR1737 = 171.99 = Free = http://www.ebay.com/itm/Emporio-Armani-Classic-Chronograph-Black-Dial-Black-Leather-Mens-Watch-AR1737-/181530211108 = http://thumbs1.ebaystatic.com/m/mUCrgic0wq1qJNd22gpaS4Q/140.jpg
+s Watch AR1416  /,.",  = 120.0 = 26.03 = http://www.ebay.com/itm/Emporio-Armani-white-gold-Ceramic-mens-Watch-AR1416-/172203265201 = http://thumbs2.ebaystatic.com/m/mVwAHz6uX3CROLjcn2xAXwg/140.jpg
+Emporio Armani Chronograph Mens Wrist Watch AR1617, 100% Authentic NIB with tags = 230.0 = 8.0 = http://www.ebay.com/itm/Emporio-Armani-Chronograph-Mens-Wrist-Watch-AR1617-100-Authentic-NIB-tags-/222127798817 = http://thumbs2.ebaystatic.com/m/ms3bCFwwK48ZmFzeTyAEz6A/140.jpg
+Emporio armani watch = 16.0 = Free = http://www.ebay.com/itm/Emporio-armani-watch-/172216357683 = http://thumbs4.ebaystatic.com/m/m1E1Nxn3EreneH5VYnG-pzw/140.jpg
+*NEW* EMPORIO ARMANI AR1721 MENS TWO TONE CHRONOGRAPH WATCH - 2 YEAR WARRANTY = 120.0 = 24.59 = http://www.ebay.com/itm/NEW-EMPORIO-ARMANI-AR1721-MENS-TWO-TONE-CHRONOGRAPH-WATCH-2-YEAR-WARRANTY-/141906305534 = http://thumbs3.ebaystatic.com/m/m_EYFAihwgVfy1i9_1DFIQw/140.jpg
+BRAND NEW EMPORIO ARMANI TWO TONE STAINLESS STEEL CHRONOGRAPH MEN WATCH AR0396 = 139.99 = 14.45 = http://www.ebay.com/itm/BRAND-NEW-EMPORIO-ARMANI-TWO-TONE-STAINLESS-STEEL-CHRONOGRAPH-MEN-WATCH-AR0396-/172200009098 = http://thumbs3.ebaystatic.com/m/m47aa4RVPDex0dlrocVex1Q/140.jpg
+s Black Sportive Chronograph Watch",  = 100.0 = 17.44 = http://www.ebay.com/itm/New-Emporio-Armani-AR5921-Mens-Black-Sportive-Chronograph-Watch-/301964783456 = http://thumbs1.ebaystatic.com/m/m8X7bGJBvXzxpICmRTcfHMQ/140.jpg
+s Emporio Armani AR2436 Watch Tags Warranty Box RRP $549",  = 249.0 = 18.8 = http://www.ebay.com/itm/New-Mens-Emporio-Armani-AR2436-Watch-Tags-Warranty-Box-RRP-549-/272092159507 = http://thumbs4.ebaystatic.com/m/miGaD1YcYcx66ENaL4B16mg/140.jpg
+s Sportivo Brown Leather Chronograph Watch - AR6005",  = 199.5 = Free = http://www.ebay.com/itm/Emporio-Armani-Mens-Sportivo-Brown-Leather-Chronograph-Watch-AR6005-/182144754847 = http://thumbs4.ebaystatic.com/m/mwwEfLOPPjv8XhjAs4bPVpA/140.jpg
+Armani AR1443 white ceramica ladies watch = 69.0 = 21.69 = http://www.ebay.com/itm/Armani-AR1443-white-ceramica-ladies-watch-/282047231948 = http://thumbs1.ebaystatic.com/m/mayHG2qPqF29gwGufEeDvcQ/140.jpg
+Armani AR1472 white ceramica ladies watch = 68.0 = 21.69 = http://www.ebay.com/itm/Armani-AR1472-white-ceramica-ladies-watch-/282047231952 = http://thumbs1.ebaystatic.com/m/mssV78AjoF3l9uy_x9iYB_Q/140.jpg
+s Watch AR1732",  = 109.95 = Free = http://www.ebay.com/itm/Emporio-Armani-Classic-Watch-Black-Leather-Analog-Quartz-Mens-Watch-AR1732-/191841755576 = http://thumbs1.ebaystatic.com/m/mgJ89bY1jDx134eigZ3gFGA/140.jpg
+s AX5300 White Leather Watch",  = 73.99 = Free = http://www.ebay.com/itm/Armani-Exchange-Womens-AX5300-White-Leather-Watch-/201400784318 = http://thumbs3.ebaystatic.com/m/mGIgRN1A7Qu7MzYx5BXCHWg/140.jpg
+s Watch Chronograph Analog Stainless Steel",  = 40.0 = Free = http://www.ebay.com/itm/Armani-Exchange-AX1054-Mens-Watch-Chronograph-Analog-Stainless-Steel-/231927818333 = http://thumbs2.ebaystatic.com/m/mfOh9N69eORmx0zDVuAtJzQ/140.jpg
+Armani AR0144 black leather strap ladies watch = 64.0 = 21.69 = http://www.ebay.com/itm/Armani-AR0144-black-leather-strap-ladies-watch-/282047231975 = http://thumbs4.ebaystatic.com/m/mrT_HY6nTB0XraEV6dMGtxw/140.jpg
+NEW SOLID STEEL EMPORIO ARMANI CHRONOGRAPH QUARTZ MEN WATCH = 115.0 = Free = http://www.ebay.com/itm/NEW-SOLID-STEEL-EMPORIO-ARMANI-CHRONOGRAPH-QUARTZ-MEN-WATCH-/121995224278 = http://thumbs3.ebaystatic.com/m/mbMyX8-vPpz_DNYT8EcymFg/140.jpg
+Armani Exchange Chronograph Black Leather Quartz Dress Watch = 72.0 = 72.0 = http://www.ebay.com/itm/Armani-Exchange-Chronograph-Black-Leather-Quartz-Dress-Watch-/222125423966 = http://thumbs3.ebaystatic.com/m/mJUw340I1K2hE0NBB89m1Pw/140.jpg
+s Armani Exchange ATLC Black LeatherStrap Watch AX1372",  = 179.99 = Free = http://www.ebay.com/itm/Mens-Armani-Exchange-ATLC-Black-LeatherStrap-Watch-AX1372-/121947822617 = http://thumbs2.ebaystatic.com/m/mXZnPvcENos8W8F5r1xJB5w/140.jpg
+s Sportivo Chronograph Silver Stainless Watch",  = 166.24 = Free = http://www.ebay.com/itm/New-Emporio-Armani-AR6036-Mens-Sportivo-Chronograph-Silver-Stainless-Watch-/162022370189 = http://thumbs2.ebaystatic.com/m/mkD9UWJNaKnYpdbhwK6jB5A/140.jpg
+Armani AR1404 white ceramica ladies watch = 69.0 = 21.69 = http://www.ebay.com/itm/Armani-AR1404-white-ceramica-ladies-watch-/282047231959 = http://thumbs4.ebaystatic.com/m/mP959kz1fry5CrLgTgflbsg/140.jpg
+s Watch - NEW",  = 134.53 = Free = http://www.ebay.com/itm/EA-AR2434-Emporio-Armani-USA-SELLER-Stainless-Steel-Mens-Watch-NEW-/371627977762 = http://thumbs3.ebaystatic.com/m/mD4Z0ZLG0jzEIlR8CiZDK1g/140.jpg
+*NEW* EMPORIO ARMANI AR2434 MENS STEEL CHRONOGRAPH WATCH - 2 YEAR WARRANTY = 110.0 = 24.59 = http://www.ebay.com/itm/NEW-EMPORIO-ARMANI-AR2434-MENS-STEEL-CHRONOGRAPH-WATCH-2-YEAR-WARRANTY-/141906305587 = http://thumbs4.ebaystatic.com/m/mZejkXHex6pdbk4N4nQsHgA/140.jpg
+s Smart AX2137 Gold Stainless-Steel Quartz Watch",  = 169.62 = Free = http://www.ebay.com/itm/Armani-Exchange-Mens-Smart-AX2137-Gold-Stainless-Steel-Quartz-Watch-/141707692645 = http://thumbs2.ebaystatic.com/m/mBRAZj84KK80b454xrylJsA/140.jpg
+s watch",  = 78.0 = 21.69 = http://www.ebay.com/itm/Armani-AR1421-ceramica-mens-watch-/282047231977 = http://thumbs2.ebaystatic.com/m/mp-EbNs3iS3IBX14J-gp5AQ/140.jpg
+s AX1509 Chronograph Brown Leather Watch",  = 115.99 = Free = http://www.ebay.com/itm/Armani-Exchange-Mens-AX1509-Chronograph-Brown-Leather-Watch-/201400784020 = http://thumbs1.ebaystatic.com/m/mRBk0cHJbXvk-E7o3aRbEGw/140.jpg
+NEW EMPORIO ARMANI AR5858 BLACK MENS CHRONOGRAPH WATCH - 2 YEAR WARRANTY = 109.0 = 17.36 = http://www.ebay.com/itm/NEW-EMPORIO-ARMANI-AR5858-BLACK-MENS-CHRONOGRAPH-WATCH-2-YEAR-WARRANTY-/291660105327 = http://thumbs4.ebaystatic.com/m/mVW64BmONfPfBcaFMD3x6tw/140.jpg
+s AX2103 Silver Stainless-Steel Quartz Watch",  = 95.98 = Free = http://www.ebay.com/itm/Armani-Exchange-Mens-AX2103-Silver-Stainless-Steel-Quartz-Watch-/131422450651 = http://thumbs4.ebaystatic.com/m/mDWwiID7ogtlwjsxnOxbtog/140.jpg
+New--Armani Exchange Ladies White Dial White Leather Watch AX6000 = 89.0 = 5.0 = http://www.ebay.com/itm/New-Armani-Exchange-Ladies-White-Dial-White-Leather-Watch-AX6000-/322094796676 = http://thumbs1.ebaystatic.com/m/mXPN0lGTaskCIrlMgGkCH7w/140.jpg
+EMPORIO ARMANI AR-27178 Stainless steel Quartz Men Watch = 40.0 = 6.0 = http://www.ebay.com/itm/EMPORIO-ARMANI-AR-27178-Stainless-steel-Quartz-Men-Watch-/272245960910 = http://thumbs3.ebaystatic.com/m/mcEqxG9rLGwyBSzR0fpe4lA/140.jpg
+s Watch AR0389",  = 159.95 = Free = http://www.ebay.com/itm/Emporio-Armani-Silver-Black-Quartz-Analog-Mens-Watch-AR0389-/172068938770 = http://thumbs3.ebaystatic.com/m/mXMrloQ1T1UtY1r2A3RmGAQ/140.jpg
+s Watch. Stainless Steel, Silver dial. (Excellent condition)",  = 69.99 = 5.0 = http://www.ebay.com/itm/Emporio-Armani-Mens-Watch-Stainless-Steel-Silver-dial-Excellent-condition-/172188267757 = http://thumbs2.ebaystatic.com/m/m5hX1I1E5befPp8JZWbRoTQ/140.jpg
+EMPORIO ARMANI Sportivo Stainless Chrono Mens Quartz Watch NEW! AR6050 = 199.7 = Free = http://www.ebay.com/itm/EMPORIO-ARMANI-Sportivo-Stainless-Chrono-Mens-Quartz-Watch-NEW-AR6050-/152101196613 = http://thumbs2.ebaystatic.com/m/mU2pSXBkIVQhLlFKU2glrcQ/140.jpg
+s Watch, #AX2506, Chronograph, Date, Leather Band",  = 99.0 = Free = http://www.ebay.com/itm/Armani-Exchange-Mens-Watch-AX2506-Chronograph-Date-Leather-Band-/262450051856 = http://thumbs1.ebaystatic.com/m/m1TDbtYMABveXVGgPCoUrbg/140.jpg
+Armani AR1648 stainless men\u2019s watch = 69.0 = 21.69 = http://www.ebay.com/itm/Armani-AR1648-stainless-men-s-watch-/282047231936 = http://thumbs1.ebaystatic.com/m/m5yxKzuwsnSKl8BKZ_L6IiA/140.jpg
+BRAND NEW EMPORIO ARMANI BLACK DIAL CHRONOGRAPH MEN WATCH AR5983 = 148.99 = 14.45 = http://www.ebay.com/itm/BRAND-NEW-EMPORIO-ARMANI-BLACK-DIAL-CHRONOGRAPH-MEN-WATCH-AR5983-/111897244129 = http://thumbs2.ebaystatic.com/m/mbgIXho8GEs7wzfvTKI3XGA/140.jpg
+s watch",  = 78.0 = 21.69 = http://www.ebay.com/itm/Armani-AR1410-ceramica-mens-watch-/282047231932 = http://thumbs1.ebaystatic.com/m/m3zdza4sVmWyTZGaRac0BHQ/140.jpg
+s Watch AR2434",  = 134.95 = Free = http://www.ebay.com/itm/Emporio-Armani-Black-Silver-Classic-Watch-Quartz-Analog-Mens-Watch-AR2434-/181999434313 = http://thumbs2.ebaystatic.com/m/mJ4F41F1D8yMl32mFozJHRw/140.jpg
+s Classic AR2413 Brown Leather Quartz Watch",  = 118.37 = Free = http://www.ebay.com/itm/Emporio-Armani-Mens-Classic-AR2413-Brown-Leather-Quartz-Watch-/141558143851 = http://thumbs4.ebaystatic.com/m/mVLKpBGXoa2QkTDd_7GfOmA/140.jpg
+S ROSE GOLD CHRONOGRAPH DIAL WATCH",  = 162.1 = Free = http://www.ebay.com/itm/NEW-EMPORIO-ARMANI-AR2452-MENS-ROSE-GOLD-CHRONOGRAPH-DIAL-WATCH-/281992340984 = http://thumbs1.ebaystatic.com/m/mdMk7cVlnTNfGFbm5XS25qw/140.jpg
+s Meccanico AR4663 Silver Stainless-Steel Automatic Watch",  = 129.99 = 10.0 = http://www.ebay.com/itm/Emporio-Armani-Mens-Meccanico-AR4663-Silver-Stainless-Steel-Automatic-Watch-/291768712369 = http://thumbs2.ebaystatic.com/m/m-URi_n0e68oQw5FI86rFiw/140.jpg
+s AX2166 Classic Silver Quartz Watch",  = 125.4 = Free = http://www.ebay.com/itm/Armani-Exchange-Mens-AX2166-Classic-Silver-Quartz-Watch-/201590442371 = http://thumbs4.ebaystatic.com/m/mC3eIsnD4-ZQdXqZ9fiwHPQ/140.jpg
+s Rose Gold Tone Stainless Steel Chronograph Watch",  = 163.25 = Free = http://www.ebay.com/itm/Armani-Exchange-AX2502-Mens-Rose-Gold-Tone-Stainless-Steel-Chronograph-Watch-/152071259426 = http://thumbs3.ebaystatic.com/m/m2VtzjAypBWlQmE3toAF2Qg/140.jpg
+Armani AR5988 black stainless men\u2019s watch = 72.0 = 21.69 = http://www.ebay.com/itm/Armani-AR5988-black-stainless-men-s-watch-/282047232543 = http://thumbs4.ebaystatic.com/m/mjks7xKlhL6NV3pjwonquqw/140.jpg
+S WATCH",  = 197.99 = Free = http://www.ebay.com/itm/BRAND-NEW-EMPORIO-ARMANI-AR1809-CLASSIC-ROSE-GOLD-CRACKED-LEATHER-MENS-WATCH-/321986024574 = http://thumbs3.ebaystatic.com/m/mJ8Ck8yYJzq421ZsLmmICxw/140.jpg
+s AX2093 Black Stainless-Steel Quartz Watch",  = 117.99 = Free = http://www.ebay.com/itm/Armani-Exchange-Mens-AX2093-Black-Stainless-Steel-Quartz-Watch-/131544919194 = http://thumbs3.ebaystatic.com/m/mdDT4OUzk7TMl5ykVwuUowQ/140.jpg
+Emporio Armani AR5867 Gents Chronograph  White Silver Chronograph Watch new = 120.0 = 17.44 = http://www.ebay.com/itm/Emporio-Armani-AR5867-Gents-Chronograph-White-Silver-Chronograph-Watch-new-/252400329620 = http://thumbs1.ebaystatic.com/m/mQQK_PENmLsVl0ovazv8Gnw/140.jpg
+S CHRONOGRAPH DIAL WATCH",  = 132.99 = Free = http://www.ebay.com/itm/NEW-EMPORIO-ARMANI-AR2434-MENS-CHRONOGRAPH-DIAL-WATCH-/272250275900 = http://thumbs1.ebaystatic.com/m/mGu1GBtsi8-9u7UOq9op9jA/140.jpg
+New Emporio Armani ARS6009 Classic Chronograph Rose Gold Tone Watch ~SWISS MADE~ = 399.99 = 399.99 = http://www.ebay.com/itm/New-Emporio-Armani-ARS6009-Classic-Chronograph-Rose-Gold-Tone-Watch-SWISS-MADE-/121838458645 = http://thumbs2.ebaystatic.com/m/mTai8tNiyE3tdyF0Au9lgKg/140.jpg
+s AX2099 Gold Stainless-Steel Quartz Watch",  = 126.77 = Free = http://www.ebay.com/itm/Armani-Exchange-Mens-AX2099-Gold-Stainless-Steel-Quartz-Watch-/131548480310 = http://thumbs3.ebaystatic.com/m/mkfV4usHDyxxRlWyOtEg49A/140.jpg
+EMPORIO ARMANI AR0373 Chronograph Silver Tone Black Dial Classic Men Watch = 209.9 = 209.9 = http://www.ebay.com/itm/EMPORIO-ARMANI-AR0373-Chronograph-Silver-Tone-Black-Dial-Classic-Men-Watch-/191752541482 = http://thumbs3.ebaystatic.com/m/m8D-Iu-4u7LxalKsu_dBFKQ/140.jpg
+s",  = 129.99 = 10.0 = http://www.ebay.com/itm/AR4668-Emporio-Armani-Meccanico-Automatic-Watch-Silver-Steel-Rose-Gold-Womens-/291768716531 = http://thumbs4.ebaystatic.com/m/mmYiU0BJ9mqX4JkVvU8UN_g/140.jpg
+s Tazio AR6072 Silver Stainless-Steel Quartz Watch",  = 172.99 = Free = http://www.ebay.com/itm/Emporio-Armani-Mens-Tazio-AR6072-Silver-Stainless-Steel-Quartz-Watch-/152003632229 = http://thumbs2.ebaystatic.com/m/mDTrST9gREciVAq-Et8039g/140.jpg
+S AR4668 WATCH",  = 149.99 = Free = http://www.ebay.com/itm/NEW-AUTHENTIC-EMPORIO-ARMANI-MECCANICO-SILVER-MENS-AR4668-WATCH-/162081158808 = http://thumbs1.ebaystatic.com/m/md-DI5rk2SHKW4govtvAsTA/140.jpg
+New EMPORIO ARMANI Mens Black Stainless Steel Chronograph Watch AR5983 = 127.99 = 21.69 = http://www.ebay.com/itm/New-EMPORIO-ARMANI-Mens-Black-Stainless-Steel-Chronograph-Watch-AR5983-/182119351013 = http://thumbs2.ebaystatic.com/m/mm9uHL4MKK8KxJYGp5Nv_iQ/140.jpg
+s Watch, model AR-5314, VGUC",  = 49.0 = 5.0 = http://www.ebay.com/itm/Emporio-Armani-Stainless-Steel-Mens-Watch-model-AR-5314-VGUC-/272222660674 = http://thumbs3.ebaystatic.com/m/mymlh3dDBwYr3KpP9jQ3ieg/140.jpg
+EMPORIO ARMANI CLASSIC CHRONOGRAPH SILVER TONE STAINLESS STEEL MEN WATCH AR1702 = 119.99 = 14.45 = http://www.ebay.com/itm/EMPORIO-ARMANI-CLASSIC-CHRONOGRAPH-SILVER-TONE-STAINLESS-STEEL-MEN-WATCH-AR1702-/141851920005 = http://thumbs2.ebaystatic.com/m/mA2R4dD3YkET2c89rGSwSHQ/140.jpg
+Emporio Armani Chronograph White Dial Black Leather Mens Watch AR1807 = 157.99 = Free = http://www.ebay.com/itm/Emporio-Armani-Chronograph-White-Dial-Black-Leather-Mens-Watch-AR1807-/151463844381 = http://thumbs2.ebaystatic.com/m/m1Nmnl3hhEd9Z_AeM5A-iNA/140.jpg
+Emporio Armani Men Xlarge Watch AR5818 Rubber XL = 99.99 = 5.0 = http://www.ebay.com/itm/Emporio-Armani-Men-Xlarge-Watch-AR5818-Rubber-XL-/272252367051 = http://thumbs4.ebaystatic.com/m/mWXWXWLa8aX7PoKqtc3pGWw/140.jpg
+NEW EMPORIO ARMANI AR0359 LADIES STAINLESS STEEL WATCH - 2 YEAR WARRANTY = 125.0 = 17.36 = http://www.ebay.com/itm/NEW-EMPORIO-ARMANI-AR0359-LADIES-STAINLESS-STEEL-WATCH-2-YEAR-WARRANTY-/291646179447 = http://thumbs4.ebaystatic.com/m/mh-Yo_zv2ktQunDXawcwVDQ/140.jpg
+Armani AR1417 white ceramica ladies watch = 74.0 = 21.69 = http://www.ebay.com/itm/Armani-AR1417-white-ceramica-ladies-watch-/282047231963 = http://thumbs4.ebaystatic.com/m/mzGxP7Lq5CQ3ft2rJpuuEPw/140.jpg
+S WATCH",  = 129.95 = Free = http://www.ebay.com/itm/BRAND-NEW-ARMANI-EXCHANGE-AX2095-BLACK-DIAL-GOLD-TONE-CHRONOGRAPH-MENS-WATCH-/221860338908 = http://thumbs1.ebaystatic.com/m/mla-_l7VVmaLfeY8TsCVJtg/140.jpg
+Emporio Armani Chronograph Blue Dial Blue Leather Mens  Watch AR1862 = 203.99 = Free = http://www.ebay.com/itm/Emporio-Armani-Chronograph-Blue-Dial-Blue-Leather-Mens-Watch-AR1862-/181915110732 = http://thumbs1.ebaystatic.com/m/mjDgq1KDa6Tfkurgu06sCzw/140.jpg
+NEW Armani Watches AR1451 Black Ceramica Chronograph Mens Watch - RRP \xa3499 = 124.95 = 21.69 = http://www.ebay.com/itm/NEW-Armani-Watches-AR1451-Black-Ceramica-Chronograph-Mens-Watch-RRP-499-/172195995737 = http://thumbs2.ebaystatic.com/m/myapyWdS_-x93dQw__MumlQ/140.jpg
+s watch",  = 69.0 = 21.69 = http://www.ebay.com/itm/Armani-AR2434-mens-watch-/282047231937 = http://thumbs2.ebaystatic.com/m/m6bXOJ28ExTVWIoaq7FSxWA/140.jpg
+NEW Emporio Armani - AR1682 - Ladies Stainless Steel - Silver Watch WARRANTY = 134.0 = 21.69 = http://www.ebay.com/itm/NEW-Emporio-Armani-AR1682-Ladies-Stainless-Steel-Silver-Watch-WARRANTY-/111652216368 = http://thumbs1.ebaystatic.com/m/mNrjqyOlYwGDKW6-BOoaHlw/140.jpg
+NEW EMPORIO ARMANI AR2462 MENS GUNMETAL CHRONOGRAPH WATCH - 2 YEAR WARRANTY = 115.0 = 17.36 = http://www.ebay.com/itm/NEW-EMPORIO-ARMANI-AR2462-MENS-GUNMETAL-CHRONOGRAPH-WATCH-2-YEAR-WARRANTY-/281633627187 = http://thumbs4.ebaystatic.com/m/me891nqUAieYwR4kofKwomQ/140.jpg
+Emporio Armani Black Dial Black Leather Mens Watch AR2411 = 114.99 = Free = http://www.ebay.com/itm/Emporio-Armani-Black-Dial-Black-Leather-Mens-Watch-AR2411-/380962169302 = http://thumbs3.ebaystatic.com/m/mEmzQixo7rgf9XipsaYyOIw/140.jpg
+Brand New Emporio Armani AR2448 Classic Stainless Steel Mens Watch = 129.99 = 7.99 = http://www.ebay.com/itm/Brand-New-Emporio-Armani-AR2448-Classic-Stainless-Steel-Mens-Watch-/162048756143 = http://thumbs4.ebaystatic.com/m/mc3bYfpUHbvj8E9DGQwkqGw/140.jpg
+Emporio Armani Sportivo Quartz Black Dial AR6019 Mens Watch = 270.0 = Free = http://www.ebay.com/itm/Emporio-Armani-Sportivo-Quartz-Black-Dial-AR6019-Mens-Watch-/172216474164 = http://thumbs1.ebaystatic.com/m/mIKTfB36r5GoXVoqYIftnNg/140.jpg
+s Watch AR0473",  = 186.04 = Free = http://www.ebay.com/itm/Emporio-Armani-Chronograph-Brown-Leather-Strap-Mens-Watch-AR0473-/221993990435 = http://thumbs4.ebaystatic.com/m/mbsmpeH7ZRzL7PtngzAXI2A/140.jpg
+s AX2058 Silver Stainless-Steel Quartz Watch",  = 108.12 = Free = http://www.ebay.com/itm/Armani-Exchange-Mens-AX2058-Silver-Stainless-Steel-Quartz-Watch-/131422450519 = http://thumbs4.ebaystatic.com/m/m0EWY9g3O0KU5_TBnwsDJ9w/140.jpg
+s Rose Gold Chronograph Watch AR2452",  = 119.99 = 17.44 = http://www.ebay.com/itm/New-EMPORIO-ARMANI-Mens-Rose-Gold-Chronograph-Watch-AR2452-/112004726760 = http://thumbs1.ebaystatic.com/m/mMooKcG4LDHfMc_Er2fexsA/140.jpg
+*New* Armani Exchange Mens Watch 48mm. Oversized Black & Gold Steel /Box AX2121 = 159.77 = Free = http://www.ebay.com/itm/New-Armani-Exchange-Mens-Watch-48mm-Oversized-Black-Gold-Steel-Box-AX2121-/301390188713 = http://thumbs2.ebaystatic.com/m/mPR-MVkJrcLooACuBvj8Cew/140.jpg
+Emporio Armani Classic AR2448 Wrist Watch for Men - 2 YEAR WARRANTY = 111.0 = Free = http://www.ebay.com/itm/Emporio-Armani-Classic-AR2448-Wrist-Watch-Men-2-YEAR-WARRANTY-/262442904195 = http://thumbs4.ebaystatic.com/m/mxEUDVWrVljRta0ZMZm6DGA/140.jpg
+S WATCH AR0390",  = 124.49 = 14.45 = http://www.ebay.com/itm/NEW-EMPORIO-ARMANI-SILVER-DIAL-CHRONOGRAPH-STAINLESS-STEEL-MENS-WATCH-AR0390-/141769114296 = http://thumbs1.ebaystatic.com/m/mbRDKaXMLdKGlBjSp3UrjzQ/140.jpg
+Armani Ladies Watch = 27.86 = 27.57 = http://www.ebay.com/itm/Armani-Ladies-Watch-/162073970203 = http://thumbs4.ebaystatic.com/m/mctKSBPC_bLy8mY6326_6rw/140.jpg
+New EMPORIO ARMANI Mens Brown Leather Chronograph Watch AR2471 = 109.99 = 21.69 = http://www.ebay.com/itm/New-EMPORIO-ARMANI-Mens-Brown-Leather-Chronograph-Watch-AR2471-/191864126194 = http://thumbs3.ebaystatic.com/m/mWInerANJKhhXiSna2l9chw/140.jpg
+Armani Exchange Stainless Steel Black Dial 46MM Mens Watch AX2103 (Silver band) = 115.0 = Free = http://www.ebay.com/itm/Armani-Exchange-Stainless-Steel-Black-Dial-46MM-Mens-Watch-AX2103-Silver-band-/182144787402 = http://thumbs3.ebaystatic.com/m/mIojDsxyqdPaNLd_AZmkU0w/140.jpg
+Emporio Armani Wrist Watch for Men AR4629 Leather Strap with Armani Box Sale = 275.0 = Free = http://www.ebay.com/itm/Emporio-Armani-Wrist-Watch-Men-AR4629-Leather-Strap-Armani-Box-Sale-/321949380134 = http://thumbs3.ebaystatic.com/m/m7p1y7llxKbZVcyPnL45wXA/140.jpg
+Brand New Men\u2019s Emporio Armani Black Chronograph Watch-AR2453-RRP \xa3299 = 129.0 = 17.44 = http://www.ebay.com/itm/Brand-New-Men-s-Emporio-Armani-Black-Chronograph-Watch-AR2453-RRP-299-/252398616929 = http://thumbs2.ebaystatic.com/m/mXJmaSVpndegIWnsWSB4WPQ/140.jpg
+s watch",  = 69.0 = 21.69 = http://www.ebay.com/itm/Armani-AR0634-silicone-band-sports-mens-watch-/282047231938 = http://thumbs3.ebaystatic.com/m/mBpfZmcfPcrDLYpyECWBabA/140.jpg
